<resources>
    <string name="app_name">ABC</string>
    <string name="mental_heal">mental health</string>
    <string name="abc">ABC</string>
    <string name="settings_general">Помощь</string>
    <string name="create_node_button">Создать запись</string>
    <string name="hint_add_new_goal">Напишите сюда цель</string>
    <string name="my_goals_button">Мой цели</string>
    <string name="my_analysis_button">Мой анализ</string>
    <string name="create_new_goal_button">Создать новую цель</string>
    <string name="insert_new_goal_button">Добавить</string>
    <string name="remote_done_goals">Удалить завершенные цели</string>
    <string name="ready_button">Done!</string>

    <!-- Choose dataset from user -->
    <string name="choose_time_button">Выбрать время</string>
    <string name="choose_time_text">Выберете время, когда произошла ситуация</string>
    <string name="choose_date_button">Выбрать дату</string>
    <string name="choose_date_text">Выберете дату, когда произошла ситуация</string>


    <!-- Choose option layout -->
    <string name="delete_text">Выполнено</string>
    <string name="change_text">Изменить</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="write_mask_input_text">Напишите сюда цель</string>
</resources>