<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calm_color"
    tools:context=".activity.GeneralActivity">

    <TextView
        android:id="@+id/abc"
        android:layout_width="131dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:alpha="0.6"
        android:gravity="center_horizontal|top"
        android:text="@string/abc"
        android:textAppearance="@style/abc"
        android:textColor="#0097A7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/new_node"
        android:layout_width="240dp"
        android:layout_height="57dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/create_node_button"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/analysis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/analysis"
        android:layout_width="241dp"
        android:layout_height="53dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/green"
        android:text="@string/my_analysis_button"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goal"
        android:layout_width="241dp"
        android:layout_height="49dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/yellow_medium"
        android:text="@string/my_goals_button"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/yellow_background"
        android:text="@string/settings_general"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:iconPadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="439dp"
        android:layout_height="559dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lazy" />


</androidx.constraintlayout.widget.ConstraintLayout>